syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "./";

service Relay {
  rpc Gesture(SensorData) returns (google.protobuf.Empty) {}
  rpc Shoot(SensorData) returns (google.protobuf.Empty) {}
  rpc Shot(SensorData) returns (google.protobuf.Empty) {}
}

service Viz {
  rpc Update(State) returns (google.protobuf.Empty) {}
  rpc InFov(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

service Pynq {
  rpc Emit(SensorData) returns (google.protobuf.Empty) {}
  rpc Poll(InFovMessage) returns (InFovMessage) {}
}

message SensorData {
  uint32 player = 1;
  uint32 time = 2; // No need to fill, synchronized on engine
  // TODO glove (MPU6050), infrared (KY-022 rx, KY-005 tx) data for AI
}

message InFovMessage {
  uint32 player = 1;
  uint32 time = 2; // No need to fill, synchronized on engine
  bool inFov = 3;
}

message Event {
  uint32 player = 1;
  uint32 time = 2;
  Action action = 3;
}

message State {
  PlayerState p1 = 1 [json_name="p1"];
  PlayerState p2 = 2 [json_name="p2"];
}

message PlayerState {
  uint32 hp = 1 [json_name="hp"];
  Action action = 2 [json_name="action"];
  uint32 bullets = 3 [json_name="bullets"];
  uint32 grenades = 4 [json_name="grenades"];
  double shield_time = 5 [json_name="shield_time"];
  uint32 shield_health = 6 [json_name="shield_health"];
  uint32 num_deaths = 7 [json_name="num_deaths"];
  uint32 num_shield = 8 [json_name="num_shield"];
}

enum Action {
    // public
    none = 0;
    grenade = 1;
    reload = 2;
    shoot = 3;
    logout = 4;
    shield = 5;
    // private
    shot = 6;
}